@@ -1,4 +1,5 @@
 HEAD
+	+ Removed the deprovision option, it needs more work to be useful
 	+ Extract the list of existing organization names from AD for better user
 	  experience
 	+ Removed the selector of Administrative Group using the default one for
